--- a/kdevelop/cprjcompoptsdlg.ui
+++ b/kdevelop/cprjcompoptsdlg.ui
@@ -171,7 +171,7 @@
                 </property>
                 <attribute>
                     <name>title</name>
-                    <string>Co&amp;mpiler settings</string>
+                    <string>Co&amp;mpiler Settings</string>
                 </attribute>
                 <grid>
                     <property stdset="1">
