--- a/parts/abbrev/abbrevconfigwidgetbase.ui
+++ b/parts/abbrev/abbrevconfigwidgetbase.ui
@@ -13,7 +13,7 @@
         </rect>
     </property>
     <property name="caption">
-        <string>Code templates</string>
+        <string>Code Templates</string>
     </property>
     <grid>
         <property name="name">
