--- a/parts/abbrev/addtemplatedlgbase.ui
+++ b/parts/abbrev/addtemplatedlgbase.ui
@@ -13,7 +13,7 @@
         </rect>
     </property>
     <property name="caption">
-        <string>Add code template</string>
+        <string>Add Code Template</string>
     </property>
     <property name="sizeGripEnabled">
         <bool>false</bool>
