--- a/parts/debugger/debuggerconfigwidgetbase.ui
+++ b/parts/debugger/debuggerconfigwidgetbase.ui
@@ -17,7 +17,7 @@
     </property>
     <property stdset="1">
         <name>caption</name>
-        <string>Debugger configuration</string>
+        <string>Debugger Configuration</string>
     </property>
     <hbox>
         <property stdset="1">
